[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/stars0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/stars1.png" type="Texture" id=3]
[ext_resource path="res://Resources/Theme/BorderStyleBox.tres" type="StyleBox" id=4]
[ext_resource path="res://Scripts/game.gd" type="Script" id=5]
[ext_resource path="res://Sprites/arrow.png" type="Texture" id=6]
[ext_resource path="res://Audio/SFX/TargetCollect.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/SFX/Die.wav" type="AudioStream" id=8]
[ext_resource path="res://Scenes/GameOver.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resources/Theme/ScoreFont.tres" type="DynamicFont" id=10]
[ext_resource path="res://Audio/Music/music.wav" type="AudioStream" id=11]
[ext_resource path="res://Scripts/bomb_spawner.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
resource_name = "MusicFadeIn"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -80, -0.25, 0, 0.25, 0, -4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="SFX" type="Node2D" parent="."]

[node name="TargetSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )

[node name="Die" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -576.0
margin_top = -512.0
margin_right = 576.0
margin_bottom = -192.0
color = Color( 0.898039, 0.109804, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -576.0
margin_top = 180.0
margin_right = 576.0
margin_bottom = 500.0
color = Color( 0.898039, 0.109804, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 320.0
margin_top = -512.0
margin_right = 640.0
margin_bottom = 500.0
color = Color( 0.898039, 0.109804, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = -640.0
margin_top = -512.0
margin_right = -320.0
margin_bottom = 500.0
color = Color( 0.898039, 0.109804, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="FarStars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 0.25 )
motion_mirroring = Vector2( 640, 360 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/FarStars"]
texture = ExtResource( 3 )

[node name="CloseStars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 640, 360 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/CloseStars"]
texture = ExtResource( 2 )

[node name="Border" type="Panel" parent="."]
margin_left = -320.0
margin_top = -192.0
margin_right = 320.0
margin_bottom = 180.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="BombSpawner" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="BombSpawner"]
wait_time = 4.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Position2D" type="Position2D" parent="CanvasLayer"]
position = Vector2( 160, 96 )

[node name="Arrow" type="Sprite" parent="CanvasLayer/Position2D"]
position = Vector2( 0, -74 )
texture = ExtResource( 6 )

[node name="Score" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 10 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" parent="." instance=ExtResource( 9 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -80.0
autoplay = true

[node name="MusicFadeIn" type="AnimationPlayer" parent="."]
autoplay = "MusicFadeIn"
anims/MusicFadeIn = SubResource( 1 )
[connection signal="timeout" from="BombSpawner/Timer" to="BombSpawner" method="_on_Timer_timeout"]
